syntax = "proto3";
package ksuser;

option go_package = "ksuser/pb/drivers;drivers";

import "generic/generic_message.proto";

message DriverListInput {
  repeated string ids = 1;
  repeated string names = 2;
  repeated string phones = 3;
  repeated string licence_numbers = 4;
  repeated string company_ids = 5;
  Pagination pagination = 6;
}